--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
-  "name": "trend-line",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start"
-  },
-  "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.4"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
-  }
+	"name": "trend-line",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build --turbopack",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-slot": "^1.2.3",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.544.0",
+		"next": "15.5.4",
+		"next-themes": "^0.4.6",
+		"radix-ui": "^1.4.3",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"react-phone-number-input": "^3.4.12",
+		"sonner": "^2.0.7",
+		"tailwind-merge": "^3.3.1",
+		"zod": "^4.1.11"
+	},
+	"devDependencies": {
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/postcss": "^4",
+		"tailwindcss": "^4",
+		"tw-animate-css": "^1.4.0"
+	}
 }
